# parallel-for-efficiency-2

./: .gitignore  README.md
c_encoder/ppe/: CMakeLists.txt  main.cu  xml_aux.cpp
c_encoder_mpi/ppe/: Makefile  main.cpp
